# careons-deid

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: quickstart.ipynb
src/zorgdeid/: __init__.py  types.py
src/zorgdeid/analysis/: analyzer.py  context_awareness.py  overlap_resolver.py
src/zorgdeid/anonymization/: engine.py  fake_data.py  strategies.py
src/zorgdeid/config/: entities.py  scoring.py
src/zorgdeid/patterns/: dutch_keywords.py  dutch_patterns.py
src/zorgdeid/processors/: __init__.py  doc_processor.py  text_processor.py
src/zorgdeid/recognizers/: __init__.py  _helpers.py  _utils.py  base.py  contact.py  datetime.py  device.py  financial.py  identifier.py  location.py  spacy_recognizer.py  vehicle.py
tests/: test.py
