[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zorgdeid"
dynamic = ["version"]
description = "ZorgDeID: PII detection, masking & anonymization for Dutch health tech."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mysoly", email = "info@mysoly.nl" },
]
keywords = ["pii", "privacy", "nlp", "dutch", "healthcare", "anonymization", "spacy"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "spacy>=3.7.0,<4.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mysoly/careons-deid"
Documentation = "https://github.com/mysoly/careons-deid#readme"
Repository = "https://github.com/mysoly/careons-deid"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "zorgdeid.__version__"}

[tool.setuptools.package-data]
"zorgdeid" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
